# GIAIC-Q4

./: README.md
Personal_Agent/personal-agent/: .env  app.py  main.py  pyproject.toml  requirements.txt  users.db
Q4_work/Appoinment_agent_with_Strramlit_UI/: README.md  appointments.json  main.py  pyproject.toml  requirements.txt
Q4_work/Appointment_agent/: app.py  embedding.py  enhanced_main_with_pinecone.py  main.py  pinecone_ai_assistant.py  pyproject.toml  requirements.txt  requirements_enhanced.txt  requirements_simple.txt  test_embedding.py
Q4_work/Handoff_agents/Handoff_agent/: main.py  pyproject.toml
Q4_work/Learn_MCP/agent_sdk_cli_project/: main.py  mcp_client.py  mcp_server.py  pyproject.toml
Q4_work/Learn_MCP/hello_mcp/: client.py  main.py
Q4_work/Learn_MCP/hello_prompts/: main.py  pyproject.toml
Q4_work/Learn_MCP/mcp_agent/: .env  hello_agent.py  mcp_server.py  pyproject.toml
Q4_work/Learn_MCP/mcp_client/: client.py  data.txt  dum.py  main.py  pyproject.toml  server.py
Q4_work/Learn_MCP/mcp_example/: main.py  pyproject.toml
Q4_work/Learn_MCP/personal_mcp_server/: agent_app.py  client.py  requirements.txt  server.py
Q4_work/Learn_MCP/project_setup_cli/: main.py  pyproject.toml
Q4_work/Markdown/: readme.md
Q4_work/Openai_agents_sdk_practice/Context_management/: dynamic_context.py  llm_context.py  local_context.py  main.py  practice_local_context_again.py  pyproject.toml
Q4_work/Openai_agents_sdk_practice/Runner_practice/: chat_threads.py  exceptions.py  file_search_tool.py  pyproject.toml  repl_demo.py  result_examples.py  run_Async.py  run_config.py  run_streamed.py  run_sync.py  web_search_tool.py
Q4_work/Openai_agents_sdk_practice/learn_context/: main.py  pyproject.toml
Q4_work/Openai_agents_sdk_practice/panaversity_class_04/: main.py  pyproject.toml
Q4_work/fastapi-webhook/: webhook.py
Q4_work/practice_class_2/: .env  main.py  pyproject.toml
Q4_work/practice_class_3/: main.py  main2.py
Q4_work/practice_class_4/: callable.py  generic.py  generic_with_dataclass.py  generic_with_dic.py  main.py
Q4_work/webhook-api/: pyproject.toml  requirements.txt  vercel.json  webhook.py
(+15 files in other folders)
