[project]
name = "appointment-agent-with-streamlit-ui"
version = "0.1.0"
description = "Doctor appointment assistant built with Streamlit, OpenAI agents, and Twilio"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "streamlit>=1.35.0",
    "requests>=2.31.0",
    "openai>=1.30.1",
    "python-dotenv>=1.1.0",
    "openai-agents @ git+https://github.com/openai/openai-agents-python.git@v0.0.14"
]