[project]
name = "appointment-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "openai-agents>=0.2.8",
    "streamlit>=1.48.1",
    "streamlit-chat>=0.1.1",
    "streamlit-lottie>=0.0.5",
    "twilio>=9.6.3",
]
